# Designing_algorithms

Lab_1/: Lab_1.sln
Lab_1/Lab_1/: Lab_1.cpp  Lab_1.vcxproj
Lab_2/: Lab_2.sln
Lab_2/Lab_2/: Lab_2.cpp  Lab_2.vcxproj
Lab_3/Lab_3/: CMakeLists.txt  btree.cpp  btree.h  datadialog.cpp  datadialog.h  datadialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab_4/Lab_4/: CAdjancencyMatrix.hpp  CAnt.hpp  CMakeLists.txt  CRandValue.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab_5/: GeneticAlgorithms.sln
Lab_5/Lab5_17/: Lab5_17.vcxproj  Lab5_17.vcxproj.filters
Lab_5/Lab5_17/src/: GreedyAlgorithm.cpp  GreedyAlgorithm.hpp  main_lab5_17.cpp
Lab_5/common_with_Lab_4/: CAdjancencyMatrix.hpp  CRandValue.hpp
Lab_6/Domineering/: CMakeLists.txt  CRandValue.h  IPlaygroundCalculator.h  appsettings.cpp  appsettings.h  cplayground.cpp  cplayground.h  cplaygroundcalculator_alphabeta.cpp  cplaygroundcalculator_alphabeta.h  cplaygroundcalculator_est.cpp  cplaygroundcalculator_est.h  cplaygroundglwidget.cpp  cplaygroundglwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
Lab_6/Domineering_Lab_6/: CAdjancencyMatrix.h  CMakeLists.txt  appsettings.cpp  appsettings.h  cplayground.cpp  cplayground.h  cplaygroundcalculator.cpp  cplaygroundcalculator.h  cplaygroundglwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.ui
